# site

./: .dockerignore  .env  .gitignore  Dockerfile  db.sqlite3  entrypoint.sh  manage.py  pyproject.toml  requirements.txt
myapp/: admin.py  admin_urls.py  api.py  apps.py  forms.py  models.py  seo_views.py  signals.py  urls.py  utils.py  views.py
myapp/migrations/: 0001_initial.py  0002_alter_volleyballcourt_options_and_more.py  0003_courtphoto_alter_volleyballcourt_options_and_more.py  0004_initial_clean.py  0005_alter_volleyballcourt_options_and_more.py  0006_volleyballcourt_moderator_comment_and_more.py  0007_courtbooking_notification_payment_review_timeslot_and_more.py  0008_court.py  0009_userprofile_district_userprofile_favorite_court_and_more.py
myapp/templatetags/: custom_filters.py  friend_extras.py
myproject/: handler.py  settings.py  urls.py  wsgi.py
templates/: base.html  base_site.html  calendar.html  change_password.html  edit_profile.html  event_calendar.html  friend_requests.html  moderate_courts.html  moderation_dashboard.html  my_profile.html  my_suggestions.html  notifications.html  profile_edit.html  public_profile.html  register.html  robots.txt  search.html  settings.html  user_profile.html
templates/admin/: base_site.html
templates/common/: home.html
templates/court/: court_detail.html  create_court.html  map.html
templates/game/: game_detail.html
templates/myapp/: base.html  booking_form.html  court_detail.html  court_page.html  create_court.html  create_game.html  edit_profile.html  event_calendar.html  friends.html  home.html  (+12 more)
(+5 files in other folders)
