[project]
name = "site"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "django>=4.2,<5.0",
    "dj-database-url>=2.1.0",
    "gunicorn>=21.2.0",
    "pillow>=10.0.0",
    "python-dotenv>=1.0.0",
    "whitenoise>=6.6.0",
]
